# Chat2.0

backend/: .gitignore  main.py  pyproject.toml  text.db
backend/src/: app.py  db.py  gemini.py  schema.py
